public/assets/css/styles.css
@import url("https://fonts.googleapis.com/css?family=Dosis|Montserrat+Alternates|Open+Sans+Condensed:300&display=swap");
@import url("https://fonts.googleapis.com/css?family=Gayathri|Montserrat|Open+Sans|Raleway&display=swap");
body {
    background-color: #f3f5f7;
    /* font-family: 'Open Sans Condensed', sans-serif; */
    /* New ones */
    /* font-family: 'Gayathri', sans-serif; */
}


/*****************Header*********************/

header {
    background-color: #343a40 !important;
    font-family: "Open Sans", sans-serif;
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    margin: 0;
    padding: 6px 0;
}

.movil-bar {
    display: none;
    font-size: 30px;
    margin-right: 10px;
    color: #fff;
    cursor: pointer;
}

.header-container {
    display: flex;
}

div.divide {
    display: flex;
    justify-content: space-between;
    padding: 0 30px;
    width: 55%;
}

div.logo {
    font-size: 30px;
    font-weight: bold;
    font-family: "Montserrat Alternates", sans-serif;
    color: rgb(199, 199, 199);
}

div.logo i {
    color: rgb(58, 143, 223);
}

.header-items {
    position: relative;
    top: 13px;
}

div.header-items ul {
    display: flex;
    justify-content: right;
}

div.header-items ul li a {
    text-decoration: none;
    color: rgb(199, 199, 199);
    padding: 10px;
    font-size: 17px;
}

div.header-items ul li a:hover {
    background-color: rgb(58, 143, 223);
    color: white;
    padding: 7px 10px;
    border-radius: 10px;
}

div.header-items ul li .btn-sign {
    color: rgb(58, 143, 223);
    padding: 7px 10px;
}

div.header-items ul li .btn-sign i {
    margin-right: 10px;
}

@media only screen and (max-width: 980px) {
    .header-container {
        display: inline;
    }
    div.header-items ul li a {
        margin: 0 7px;
        text-decoration: none;
        color: rgb(199, 199, 199);
    }
}

@media only screen and (max-width: 768px) {
    .header-container {
        display: inline;
    }
    .movil-bar {
        display: initial;
    }
    div.divide {
        display: flex;
        justify-content: space-between;
        width: 100%;
    }
    div.header-items {
        display: none;
    }
    div.header-items ul {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        padding: 0 20px;
    }
    div.header-items ul li a:hover {
        background-color: transparent;
        color: white;
        padding: 0;
        margin: 0;
    }
    div.header-items ul li a {
        text-decoration: none;
        color: rgb(199, 199, 199);
        padding: 40px 0;
        margin: 0;
    }
}

@media only screen and (max-width: 640px) {
    div.header-items ul {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        padding: 0 10px;
    }
    div.header-items ul li a {
        text-decoration: none;
        color: rgb(199, 199, 199);
        padding: 0;
        margin: 0;
    }
    div.header-items ul li a:hover {
        background-color: transparent;
        color: white;
        padding: 0;
        margin: 0;
    }
    div.header-items ul li {
        padding: 3px 0;
    }
}


/****************** Index.html Section *****************/

.jobsField {
    background-color: #f3f5f7;
    overflow: hidden;
    min-height: 100vh;
}

.divForm {
    background-color: #32538f;
    padding-bottom: 35px;
    color: #fff;
}

.divForm h3 {
    font-family: "Dosis", sans-serif;
    font-size: 1.4rem;
}

.divForm input {
    font-family: "Open Sans", sans-serif;
}

#jobSearch {
    width: 60%;
    margin: 0 auto;
    padding: 30px 0;
}

#findJobs {
    font-size: 16px;
    height: 40px;
    position: relative;
    top: 33px;
}

#heading {
    font-family: "Dosis", sans-serif;
    text-align: center;
    padding: 20px 0;
}

.jobsList {
    background: #fff;
    border-radius: 5px;
    padding: 15px 30px;
    margin-bottom: 30px;
    color: #000;
    -webkit-box-shadow: 0px 0px 20px -5px #000000;
    box-shadow: 0px 0px 20px -5px #b1b1b1;
}

.jobsList .info {
    padding-bottom: 20px;
    font-size: 16px;
    border-bottom: solid 1px rgb(192, 192, 192);
}

.jobsList .info i {
    margin: 0 10px 0 0;
}

@media only screen and (max-width: 640px) {
    #jobSearch {
        width: 80%;
        padding: 0 15px;
    }
    .flex {
        flex-flow: column;
    }
    .flex .col {
        padding: 40px 0;
    }
    #findJobs {
        position: relative;
        top: 25px;
    }
}

@media only screen and (max-width: 768px) {
    #jobSearch {
        width: 90%;
    }
}


/***************** Emplyers.html section ****************/

#employer-btn {
    margin-bottom: 20px;
}

.employerForm {
    padding: 30px 0;
}

.jumbotron-fluid {
    margin: 0;
    background-image: url(../img/main-photo.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
    padding: 75px 0;
}

.form-group label {
    font-size: 18px;
}

.formField {
    background-color: #fff;
    border-radius: 10px;
    -webkit-box-shadow: 0px 0px 20px -5px #000000;
    box-shadow: 0px 0px 20px -5px #b1b1b1;
}

.display-4 {
    color: #fff;
    font-size: 60px;
}

.lead {
    color: #fff;
    font-size: 30px;
}

.employerForm form h2 {
    padding: 20px 0;
    font-family: "Dosis", sans-serif;
}


/***************** RecentJobs.html section ******************/

.options {
    background-color: #979797;
    overflow: hidden;
    min-height: 100vh;
}

.menu {
    width: 30%;
    float: left;
    background-color: #32538f;
    padding: 10px 40px 10px 20px;
    border-radius: 6px;
    margin: 87px 25px 0 10px;
    -webkit-box-shadow: 0px 0px 20px -5px #000000;
    box-shadow: 0px 0px 20px -5px #b1b1b1;
}

.btn-list li {
    border-bottom: solid 1px lightgray;
    margin-bottom: 20px;
}

.btn-list button {
    font-size: 17px;
    color: #fff;
    padding: 10px 0;
}

.btn-list button:hover {
    color: lightgray;
    text-decoration: none;
}

.recent-heading {
    color: #fff;
}

.aside {
    width: 65%;
    float: left;
}

@media only screen and (max-width: 640px) {
    .menu {
        width: 95%;
        margin: 30px 25px 0 10px;
    }
    .aside {
        width: 95%;
        margin: 0 25px 0 10px;
    }
    footer {
        padding: 0 10px;
    }
}


/*******Footer*******/

footer {
    background-color: #343a40 !important;
}

div.logo-footer {
    text-align: center;
    margin-bottom: 5px;
    font-size: 25px;
    font-weight: bold;
    font-family: "Montserrat Alternates", sans-serif;
    color: rgb(199, 199, 199);
}

div.logo-footer i {
    color: rgb(58, 143, 223);
}

div.footer-info {
    display: flex;
    justify-content: space-between;
}

div.resources h6 {
    color: gray;
}

div.resources-info {
    color: white;
}

div.resources-info h5 a {
    text-decoration: none;
    color: white;
    font-size: 15px;
}

div.resources-info h5 a:hover {
    color: rgb(58, 143, 223);
}

div.footer-end p {
    margin: 0;
    color: white;
    text-align: center;
    padding-bottom: 10px;
}

div.resources ul li a {
    font-size: 18px;
    padding: 5px;
    color: #fff;
}

div.resources ul li a:hover {
    color: rgb(58, 143, 223);
}

@media only screen and (max-width: 768px) {
    footer {
        padding: 0 10px;
    }
}

@media only screen and (max-width: 1064px) {
    footer {
        padding: 0 10px;
    }
}

